# DocMind

./: .env.example  .gitignore  README.md  index.py  ingest.py  pyproject.toml  query.py  requirements.txt  retrieval.py
.github/workflows/: ci.yml
07_RAG/: requirements.txt
08_RAG_queue/frontend/src/: App.jsx
08_RAG_queue/queues/: server.py
client/: rq_client.py
docs/: JOURNAL.md  PHASES.md  PLAN.md
queues/: worker.py
samples/: hello.txt
src/docmind/: __init__.py  config.py  logging.py  types.py
src/docmind/ingest/: chunker.py  embedder.py  pipeline.py  store.py
src/docmind/retrieve/: dense.py  hybrid.py  keyword.py  rerank.py  retriever.py
tests/: test_retrieve.py  test_smoke.py
