[project]
name = "docmind"
version = "0.1.0"
description = "This is a RAG system."
readme = "README.md"
authors = [
    { name = "astroboy1183", email = "jayanthapalla@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.6",
    "pydantic-settings>=2.14.1",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.5.1",
]


[build-system]
requires = ["uv_build>=0.11.19,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "ruff>=0.15.16",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]  # errors, pyflakes, import-sort, pyupgrade, bugbear
